09/04/25 add new controller and services, dark theme interface/new view fxml file